--- a/projeto_biblioteca/nbproject/project.properties
+++ b/projeto_biblioteca/nbproject/project.properties
@@ -67,7 +67,7 @@ javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
-platform.active=JDK_20
+platform.active=Zulu_20.0.2_9
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
